fix(styles): adjust base styles to center content in layout fix(styles): add scrollbar-gutter to base styles

--- a/src/routes/styles/foundation/_base.scss
+++ b/src/routes/styles/foundation/_base.scss
@@ -34,6 +34,10 @@
 	font-display: swap;
 }
 
+html {
+	scrollbar-gutter: stable;
+}
+
 body {
 	margin: 0;
 	font-weight: 400;
